# hue-rust

./: Cargo.toml  README.md  userid
examples/: discover.rs
src/: api.rs  discover.rs  lib.rs  main-test.rs  structs.rs
